Added feature hierachies and types
